--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Harry Zhuang</title>
+    <title>Data Visualization</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
@@ -11,51 +11,50 @@
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Harry</h1>
-      <h2>a <span class="pro">pro</span>grammer</h2>
+      <h1>Data Visualization</h1>
+      <h2>by <span class="pro">Jianwei</span>Zhuang</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img src="images/analytics.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/me.png" alt="a picture of me">
-        <h2>Nice to meet u</h2>
-        <p class="intro">I am a student in Sichuan University majored in Software Enginnering. I ❤️ reading and watching movies!</p>
+        <img height="200px" width="200px" src="images/jz_photo.jpg" alt="a picture of me">
+        <h2>Jianwei Zhuang</h2>
+        <p class="intro">In my childhood, my mother always shared the line chart of her stock account with me,
+        on which the colorful lines impressed me a lot. When I grow up, I implemented some Data Visualization projects as well.
+        After those practice, I started to wondering some theoretical problems like why should I utilize pie chart instead of other charts in the project?
+        or how much data should I pick for this particular visualization? Therefore, I choose this course to seek for the answers.</p>
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>Good Example</h2>
         <div class="skill-row">
-          <img class="coding-img" src="images/coding.png" alt="coding">
-          <h3>Coding</h3>
-          <p>I can develop software and websites which really do help in our daily life, and I keep learning the cutting edge knowledge in this field.</p>
-        </div>
-        <div class="skill-row">
-          <img class="photography-img" src="images/photograph.png" alt="photography">
-          <h3>Photography</h3>
-          <p>Though a green hand photography currently, I keen on recording this interesting world with the camera in my hand</p>
-        </div>
-        <div class="skill-row">
-          <img class="handwriting-img" src="images/handwriting.png" alt="handwriting">
-          <h3>Handwriting</h3>
-          <p>Learning Traditional Chinese Handwriting for about six years, able to write beautiful chinese characters with the brushes.</p>
+          <img height="350px" width="350px" class="coding-img" src="images/population.gif" alt="coding">
+          <h3>Percent of U.S. population by age group, 1950-2060</h3>
+          <p>This is a good example of Data Visualization because it is crystal clear and simple. The aim of this visualization is to demonstrate
+          the percent of population by age group in a period of time. Instead of placing all the charts together for the readers to cpmpare by themselves,
+          the author of this chart make it into an animation, which easily shows the trend of population changing in different dimensions. We can easily get
+          useful information and draw conclusions from the demograph.</p>
         </div>
       </div>
       <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>If you have the same interest as I do.</h3>
-        <p class="contact-message">Have the same interest as I do or happen to be my schoolmate?. Let's keep in touch and you can keep visiting this site to get updated news of me!</p>
-        <a class="btn" href="mailto:276095274@qq.com">CONTACT ME</a>
+      <div class="skills">
+        <h2>Bad Example</h2>
+        <div class="skill-row">
+          <img height="300px" width="800px" class="coding-img" src="images/heat.png" alt="coding">
+          <h3>Coronavirus heat map</h3>
+          <p>I regard this one as a bad example of Data Visualization. At first glance, this is a heat map, but actually, it should be regarded as an "anti-heat" heat map.
+           We’re wired to see the darkest or strongest color as having the highest amount of something, the lightest color as having the least in a heat map.
+           The graph above goes against this assumption, the highest number of Covid-19 cases, “10,001 or more”, is represented by a lighter color than the lowest number, “None”.
+           There’s literally no logic to the rest of the colors either. This example is strongly against the readers' nature.</p>
+        </div>
       </div>
-    </div>
-
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p class="copyright">© 2020 Harry Zhuang.</p>
+      <p class="copyright">© 2021 Jianwei Zhuang.</p>
     </div>
 
   </body>
