--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img height="200px" width="200px" src="images/jz_photo.jpg" alt="a picture of me">
+        <img height="200px" width="200px" src="images/jz_photo.JPG" alt="a picture of me">
         <h2>Jianwei Zhuang</h2>
         <p class="intro">In my childhood, my mother always shared the line chart of her stock account with me,
         on which the colorful lines impressed me a lot. When I grow up, I implemented some Data Visualization projects as well.
