--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="HWDwpAz975Gv_Zv3Zb2XqjmK5vXNAhTLbHNLtMm3Q-o" />
     <title>wpaskjbdn zqnakjsnde</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
